--- a/NetCoreCQRSdemo.Persistence/NetCoreCQRSdemo.Persistence.csproj
+++ b/NetCoreCQRSdemo.Persistence/NetCoreCQRSdemo.Persistence.csproj
@@ -13,6 +13,8 @@
     <Compile Remove="Migrations\20200229162922_int.Designer.cs" />
     <Compile Remove="Migrations\20200229211658_Initial_Schema.cs" />
     <Compile Remove="Migrations\20200229211658_Initial_Schema.Designer.cs" />
+    <Compile Remove="Migrations\20200229225239_initial-migration.cs" />
+    <Compile Remove="Migrations\20200229225239_initial-migration.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -31,10 +33,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\NetCoreCQRSdemo.Domain\NetCoreCQRSdemo.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
