--- a/Client/angular.json
+++ b/Client/angular.json
@@ -28,7 +28,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/assets/css/w3.css"
             ],
             "scripts": []
           },
