--- a/Client/angular.json
+++ b/Client/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "NetCoreCQRSdemo": {
@@ -124,6 +124,12 @@
           }
         }
       }
-    }},
-  "defaultProject": "NetCoreCQRSdemo"
+    }
+  },
+  "defaultProject": "NetCoreCQRSdemo",
+  "schematics": {
+    "@schematics/angular:component": {
+      "styleext": "scss"
+    }
+  }
 }
