--- a/NetCoreCqrsESdemo.BusinessLogic/NetCoreCqrsESdemo.BusinessLogic.csproj
+++ b/NetCoreCqrsESdemo.BusinessLogic/NetCoreCqrsESdemo.BusinessLogic.csproj
@@ -8,16 +8,13 @@
     <PackageReference Include="MediatR" Version="8.0.1" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="NUnit" Version="3.12.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\NetCoreCQRSdemo.Domain\NetCoreCQRSdemo.Domain.csproj" />
     <ProjectReference Include="..\NetCoreCQRSdemo.Persistence\NetCoreCQRSdemo.Persistence.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Commands\" />
   </ItemGroup>
 
 </Project>
