--- a/NetCoreCqrsESdemo.BusinessLogic/NetCoreCqrsESdemo.BusinessLogic.csproj
+++ b/NetCoreCqrsESdemo.BusinessLogic/NetCoreCqrsESdemo.BusinessLogic.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Commands\EventCommands\**" />
+    <EmbeddedResource Remove="Commands\EventCommands\**" />
+    <None Remove="Commands\EventCommands\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MediatR" Version="8.0.1" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.2" />
@@ -15,10 +21,6 @@
   <ItemGroup>
     <ProjectReference Include="..\NetCoreCQRSdemo.Domain\NetCoreCQRSdemo.Domain.csproj" />
     <ProjectReference Include="..\NetCoreCQRSdemo.Persistence\NetCoreCQRSdemo.Persistence.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Commands\EventCommands\" />
   </ItemGroup>
 
 </Project>
