--- a/NetCoreCQRSdemo.Api/NetCoreCQRSdemo.Api.csproj
+++ b/NetCoreCQRSdemo.Api/NetCoreCQRSdemo.Api.csproj
@@ -14,6 +14,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.2" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Reinforced.Typings" Version="1.5.7" />
   </ItemGroup>
