--- a/NetCoreCqrsESdemo.BusinessLogic/NetCoreCqrsESdemo.BusinessLogic.csproj
+++ b/NetCoreCqrsESdemo.BusinessLogic/NetCoreCqrsESdemo.BusinessLogic.csproj
@@ -26,6 +26,7 @@
   <ItemGroup>
     <Folder Include="Commands\CocktailCommands\" />
     <Folder Include="Commands\SnapshotCommands\" />
+    <Folder Include="Interfaces\" />
     <Folder Include="Queries\CocktailQueries\" />
     <Folder Include="Queries\EventQueries\" />
   </ItemGroup>
