--- a/NetCoreCQRSdemo.Api/Properties/launchSettings.json
+++ b/NetCoreCQRSdemo.Api/Properties/launchSettings.json
@@ -11,6 +11,7 @@
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
+      "launchBrowser": true,
       "launchUrl": "cocktails",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
