--- a/NetCoreCqrsESdemo.BusinessLogic/NetCoreCqrsESdemo.BusinessLogic.csproj
+++ b/NetCoreCqrsESdemo.BusinessLogic/NetCoreCqrsESdemo.BusinessLogic.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="9.0.1" />
     <PackageReference Include="MediatR" Version="8.0.1" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.2" />
